--- a/assets/src/app/home/templates/home.tpl.html
+++ b/assets/src/app/home/templates/home.tpl.html
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-4">
-            <img class="avatar" style="margin-top:0em" ng-src="{{currentUser.avatarUrl}}"/>
+            <img style="position:relative" class="avatar" ng-src="{{currentUser.avatarUrl}}"/>
             <h2><a href="/member/{{currentUser.username}}"><b>{{currentUser.username}}</a></b></h2>
             <div class="spacing-5"></div>
             <h5>Bills - {{committees.length}}</h5>
