--- a/.tmp/public/src/app/committees/index.tpl.html
+++ b/.tmp/public/src/app/committees/index.tpl.html
@@ -16,16 +16,15 @@
         </ul>
     </div>
     <div ng-show="currentUser">
-        <div style="margin-left:2%;margin-right:2%;">
-        <form class="committee-input" role="form" ng-submit="createCommittee(newCommittee)">
-            <div class="form-group">
-                <input type="text" placeholder= "committee title" ng-model="newCommittee.title" class="form-control" id="postTitle">
-                <input type="text" placeholder= "committee url" ng-model="newCommittee.urlTitle" class="form-control" id="postTitle">
-                <input type="text" placeholder= "committee parent" ng-model="newCommittee.parent" class="form-control" id="postTitle">
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+        <form role="form">
+            <md-input-container class="md-block">
+                <input ng-model="newCommittee.title" type="text" placeholder= "committee title">
+            </md-input-container>
+            <!--<md-input-container class="md-block">
+                <input ng-model="newCommittee.parent" type="text" placeholder= "committee parent">
+            </md-input-container>-->
+            <button ng-click="createCommittee()" type="submit" class="btn btn-default"><i class="fa fa-paper-plane"></i> Submit</button>
         </form>
-        </div>
     </div>
     <div class="committee-list-parent-container" id="committeeScrolling">
         <div class="committee-list-container">
