--- a/assets/src/app/member/templates/representatives.tpl.html
+++ b/assets/src/app/member/templates/representatives.tpl.html
@@ -17,7 +17,5 @@
 		</div>
 	</div>
 	<div class="spacing-10"></div>
-	<div ng-show="representatives.legnth != representativeCount" ng-click="loadMore()" style="text-align:center">
-		<button class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-caret-down"></i></button>
-	</div>
+	<button ng-show="representatives.length != representativeCount" ng-click="loadMore()" class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-caret-down"></i></button>
 </div>
