--- a/assets/src/app/member/templates/constituents.tpl.html
+++ b/assets/src/app/member/templates/constituents.tpl.html
@@ -17,5 +17,5 @@
 		</div>
 	</div>
 	<div class="spacing-10"></div>
-	<button ng-show="votes.length != voteCount" ng-click="loadMore()" class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-caret-down"></i></button>
+	<button ng-show="constituents.length != constituentCount" ng-click="loadMore()" class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-caret-down"></i></button>
 </div>
