--- a/assets/src/app/post/index.tpl.html
+++ b/assets/src/app/post/index.tpl.html
@@ -21,20 +21,17 @@
                         <a href="#" ng-click=""><i class="fa fa-thumbs-down"></i></a> 
                         <a href="#">reply</a>
                     </div>
-                    <div class="pull-right">
-                        <a href="post/{{post.id}}"><i class="fa fa-link"></i></a>
-                    </div>
                 </div>
 
-                 <!--
                 <div class="profilePost">
                     <form role="form">
                         <md-input-container class="md-block">
                             <textarea ng-model="newPost.post" rows="5" md-select-on-focus aria-label="new post" placeholder=""></textarea>
                         </md-input-container>
                     </form>
+                    <button ng-click="createPost()" type="submit" class="btn btn-default"><i class="fa fa-paper-plane"></i> Submit</button>
+
                 </div>
-                -->
 
         </div>
     </md-card>
