--- a/assets/src/app/member/templates/constituents.tpl.html
+++ b/assets/src/app/member/templates/constituents.tpl.html
@@ -2,7 +2,7 @@
 	<div class="col-lg-4 col-sm-6" ng-repeat="constituent in constituents">
 		<div style="margin:10px; box-shadow: 2px 2px 10px #999;overflow:hidden">
 			<div class="image" style="background-image: url('{{constituent.constituent.coverUrl}}')">
-				<img alt="" style="position:absolute;left:0;right0;margin:0 auto;margin-top:4em" ng-src="{{constituent.constituent.avatarUrl}}" err-src="/images/avatar.png">
+				<img alt="" ng-src="{{constituent.constituent.avatarUrl}}" err-src="/images/avatar.png">
 			</div>
 			<div class="info">
 				<h4 class="name"><a href="member/{{constituent.constituent.username}}">{{constituent.constituent.username}}</a></h4>
