--- a/.tmp/public/src/app/bill/index.tpl.html
+++ b/.tmp/public/src/app/bill/index.tpl.html
@@ -30,6 +30,8 @@
 							<a ng-show="bill.user.socialAccounts.google.profileUrl" href="{{bill.user.socialAccounts.google.profileUrl}}"  target="_blank"><i class="fa fa-google google-icon"></i></a>
 						</div>
 					</div>
+					<h5 ng-show="false"><a href="#">and 8 cosponsors</a></h5>
+					<h4 ng-show="bill.congressGovUrl"><a href="{{bill.congressGovUrl}}">congress.gov link</a></h4>
 				</div>
 				<div class="col-sm-8">
 					<p>{{bill.billContent.current_status_description}}</p>
@@ -40,7 +42,6 @@
 					</div>
 					<div ng-bind-html="billContent"></div>
 					<h4 ng-show="!billContent">Bill Text not currently available</h4>
-					<h4 ng-show="bill.congressGovUrl"><a href="{{bill.congressGovUrl}}">congress.gov link</a></h4>
 				</div>
 		    </uib-tab>
 		    <uib-tab heading="Activity">
