--- a/assets/src/app/about/index.tpl.html
+++ b/assets/src/app/about/index.tpl.html
@@ -1,3 +1,15 @@
+<style>
+.verticalRow{
+	display: flex;
+    align-items: center;
+}
+@media (max-width: 767px) {
+    .verticalRow {
+        display: block; /* Turn off the flexible box layout */
+    }
+}
+</style>
+
 <div class="imageContainer">
 	<video class='flexible' autoplay="autoplay" muted="muted" preload="auto" loop="loop"><source src="https://s3-us-west-2.amazonaws.com/voetr/washington.mp4" type="video/mp4" playsinline></video>
 	<div class="imageContainerDiv container">  
@@ -10,41 +22,49 @@
 			<h2>directly impact the political landscape</h2>
 			<br>
 			<h4>build empowerment though creating constituent coalitions.</h4>
-			<!--ability to create citizen colitions-->
 			<h4>change consensus though direct input on policy decisions.</h4>
 		</div>
 	</div>
 	<div id="section2">
 		<div class="container">
-			<div class="row">
-				<div class="col-sm-4">
-					<img src="images/voetr-new.png" style="max-width:100%">
+			<div class="row verticalRow">
+				<div class="col-sm-5">
+					<img src="images/voetr-about.png" style="max-width:100%">
 		    	</div>
-				<div class="col-sm-8" style="text-align:right">
-					<h4>direct your impact though input on policy</h4>
-					<h5>decision making influence in the power of your hands</h5>
+				<div class="col-sm-6 col-sm-offset-1" style="">
+					<h3>direct your impact though input on policy</h3>
+					<h4>decision making influence in the power of your hands</h4>
 				</div>
 			</div>
 		</div>
 	</div>
 	<div id="section3">
 		<div class="container">
-			<div class="row">
+			<div class="row verticalRow">
 				<div class="col-sm-8">
 					<h3>create constituent coalitions</h3>
 					<h4>elect representatives and serve your constituents</h4>
-			    	<p>with continual elections, select others to represent you at any time</p>
+					<h4>unite together and be heard</h4>
+					<!--<p>come togther and be heard</p>-->
+			    	<!--<p>with continual elections, select others to represent you at any time</p>-->
 		    	</div>
 		    	<div class="col-sm-4">
-					<img src="images/voetr-about3.png" style="max-width:100%">
+					<img src="images/voetr-about4.png" style="max-width:100%">
 		    	</div>
 	    	</div>
 	    </div>
 	</div>
 	<div id="section4">
 		<div class="container" style="text-align:left">
-			<img style="height:64px;" src="images/voetr_icon.png"/>
-			<h4>power to the people</h4>
+			<div class="row verticalRow">
+				<div class="col-sm-8">
+					<img style="height:64px;" src="images/voetr_icon.png"/>
+					<h3>power to the people</h3>
+				</div>
+				<div class="col-sm-4">
+					<img src="images/voetr-about3.png" style="max-width:100%">
+		    	</div>
+	    	</div>
 		</div>
 	</div>
 </div>
