--- a/assets/src/app/post/index.tpl.html
+++ b/assets/src/app/post/index.tpl.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <md-card style="margin-top:10%;margin-bottom:10%">
+    <md-card style="margin-top:5%;margin-bottom:5%">
         <div class="card-container">
 
             <div class="post-controller-container">
@@ -159,7 +159,7 @@
                     </md-card>-->
 
 
-                    <!--<div ng-include="'post/post.tpl.html'" ng-repeat=""></div>-->
+                    <div ng-include="'post/post.tpl.html'" ng-repeat="post in post.children"></div>
 
 
                 </div>
