--- a/assets/src/app/member/templates/activity.tpl.html
+++ b/assets/src/app/member/templates/activity.tpl.html
@@ -65,8 +65,8 @@
                 <h4>{{result.voteString}}<span ng-show="member.constituentCount>0"> for <a href="member/{{member.username}}/constituents">{{member.constituentCount}} constituent<span ng-show="member.constituentCount!=1">s</span></a></span></h4>
                 <div class="clearfix"></div>
                 <a href="/vote/{{result.vote.id}}"><h4>{{result.vote.title}}</h4></a>
-                <div class="spacing-10"></div>
-                <a href="/bill/{{result.bill.id}}/{{result.bill.title}}">{{result.bill.title}}</a>
+                <!--<div class="spacing-10"></div>-->
+                <a href="/bill/{{result.bill.id}}/{{result.bill.title}}"><i class="fa fa-file-text-o"></i> {{result.bill.title}}</a>
                 <div class="spacing-10"></div>
                 <button ng-class="{'upVoted': result.voteString=='Yes' || result.voteString=='Yea'}" class="btn btn-default upVote col-xs-6" ng-click="createVote(1, vote)"><i class="fa fa-angle-up"></i>  {{result.vote.plusCount}}</button>
                 <button ng-class="{'downVoted': result.voteString=='No' || result.voteString=='Nay'}" class="btn btn-default downVote col-xs-6" ng-click="createVote(-1, vote)"><i class="fa fa-angle-down"></i>  {{result.vote.minusCount}}</button>
