--- a/assets/src/app/home/templates/intro.tpl.html
+++ b/assets/src/app/home/templates/intro.tpl.html
@@ -38,7 +38,7 @@
     <div id="bills">
         <div class="container">
             <h2><a href="/bills">{{billCount}} bills</a></h2>
-            <md-divider></md-divider><br>
+            <br><br>
             <md-card ng-repeat="bill in bills">
                 <md-card-title>
                     <md-card-title-text>
@@ -59,7 +59,7 @@
     <div id="committees">
         <div class="container">
             <h2><a href="/committees">{{committeeCount}} committees</a></h2>
-            <md-divider></md-divider><br>
+            <br><br>
             <md-card ng-repeat="committee in committees" class="col-sm-12">
                 <md-card-title>
                     <md-card-title-text>
@@ -76,8 +76,8 @@
     <div id="members">
         <div class="container">
             <h2><a href="/members">{{userCount}} members</a></h2>
-            <md-divider></md-divider><br>
-            <button ng-show="!gettingRepresentatives" ng-click="getLatLng()" class="btn btn-default">find representatives</button><br>
+            <br><br>
+            <!--<button ng-show="!gettingRepresentatives" ng-click="getLatLng()" class="btn btn-default">find representatives</button><br>-->
             <div class="col-lg-4 col-sm-6" ng-repeat="user in officialRepresentatives">
                 <div class="member-card">
                     <div class="image" style="background-image: url('{{user.coverUrl}}')">
