--- a/views/email/vote.tpl.html
+++ b/views/email/vote.tpl.html
@@ -1,32 +1,105 @@
-<div style="height:100vh">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
+<head>
+<meta name="viewport" content="width=device-width" />
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>FAX2DC</title>
+<style type="text/css">
+img {
+max-width: 100%;
+}
+body {
+-webkit-font-smoothing: antialiased; -webkit-text-size-adjust: none; width: 100% !important; height: 100%; line-height: 1.6em;
+}
+body {
+background-color: #f6f6f6;
+}
+@media only screen and (max-width: 640px) {
+  body {
+    padding: 0 !important;
+  }
+  h1 {
+    font-weight: 800 !important; margin: 20px 0 5px !important;
+  }
+  h2 {
+    font-weight: 800 !important; margin: 20px 0 5px !important;
+  }
+  h3 {
+    font-weight: 800 !important; margin: 20px 0 5px !important;
+  }
+  h4 {
+    font-weight: 800 !important; margin: 20px 0 5px !important;
+  }
+  h1 {
+    font-size: 22px !important;
+  }
+  h2 {
+    font-size: 18px !important;
+  }
+  h3 {
+    font-size: 16px !important;
+  }
+  .container {
+    padding: 0 !important; width: 100% !important;
+  }
+  .content {
+    padding: 0 !important;
+  }
+  .content-wrap {
+    padding: 10px !important;
+  }
+  .invoice {
+    width: 100% !important;
+  }
+}
+</style>
+</head>
+<body itemscope itemtype="http://schema.org/EmailMessage" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; -webkit-font-smoothing: antialiased; -webkit-text-size-adjust: none; width: 100% !important; height: 100%; line-height: 1.6em; background-color: #f6f6f6; margin: 0;" bgcolor="#f6f6f6">
 
-	<h1>Dear {{legislator}}</h1>
-	<p>I, {{user.firstName}} your constituent voted {{voteString}} on the question {{vote.title}} for the bill {{bill.title}}. As your constituent, you knowing this information allows us to build a relationship and engage in policy-based dialog.</p>
-
-	<p>Myself alongside with {{voteCount}} of your constituents with support of 20,723 of the general population agree the attached legislation is important.</p>
-
-	<p>Please take the time to read.</p>
-
-	<p>Please continue this conversation, I can be reached by mail at {{address}}, by email at {{email}}, and by phone at {{phone}}.</p>
-
-	<p>Once again, {{voteCount}} of your constituents support this legislation, and {{constitutents}} persons have given me permission to speak for them on behalf of this cause.</p>
-
-	<p>I appreciate an open dialog.</p>
-
-	<p>{{user.firstName}} {{user.lastName}}</p>
-</div>
-<div style="height:100vh">
-	{{bill.title}}
-	{{vote.title}}
-	<hr>
-	{{bill.url}}
-
-	Vote Info
-	Member information
-	Government Identification
-	<img src="{{user.identificationUrl}}"></img>
-	Member vote
-	Legislators vote
-	Vote statistics – total votes, total constitutes vote, support %
-	Legislative vote sway – how far representative voting has an effect
-</div>
+<table class="body-wrap" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; width: 100%; background-color: #f6f6f6; margin: 0;" bgcolor="#f6f6f6"><tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;"><td style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0;" valign="top"></td>
+		<td class="container" width="600" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; display: block !important; max-width: 600px !important; clear: both !important; margin: 0 auto;" valign="top">
+			<div class="content" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; max-width: 600px; display: block; margin: 0 auto; padding: 20px;">
+				<table class="main" width="100%" cellpadding="0" cellspacing="0" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; border-radius: 3px; background-color: #fff; margin: 0; border: 1px solid #e9e9e9;" bgcolor="#fff"><tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;"><td class="alert alert-warning" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 16px; vertical-align: top; color: #fff; font-weight: 500; text-align: center; border-radius: 3px 3px 0 0; background-color: #bd1f2f; margin: 0; padding: 20px;" align="center" bgcolor="#bd1f2f" valign="top">
+							Dear, {{legislator}}
+						</td>
+					</tr>
+					<tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
+					<td class="content-wrap" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 20px;" valign="top">
+							<table width="100%" cellpadding="0" cellspacing="0" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
+								<tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
+									<td class="content-block" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;" valign="top">
+										<p>I, {{user.firstName}} your constituent voted {{voteString}} on the question {{vote.title}} for the bill {{bill.title}}. As your constituent, you knowing this information allows us to build a relationship and engage in policy-based dialog.</p>
+										<p>Myself alongside with {{voteCount}} of your constituents with support of 20,723 of the general population agree the attached legislation is important.</p>
+										<p>Please take the time to read.</p>
+										<p>Please continue this conversation, I can be reached by mail at {{address}}, by email at {{email}}, and by phone at {{phone}}.</p>
+										<p>Once again, {{voteCount}} of your constituents support this legislation, and {{constitutents}} persons have given me permission to speak for them on behalf of this cause.</p>
+										<p>I appreciate an open dialog.</p>
+										<p>{{user.firstName}} {{user.lastName}}</p>
+									</td>
+								</tr>
+								<tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
+									<td class="content-block" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;" valign="top">
+										<p>{{vote.title}}</p>
+										<hr>
+										{{bill.url}}</p>
+										<p>Vote Info</p>
+										<p>Member information</p>
+										<p>Government Identification</p>
+										<img src="{{user.identificationUrl}}"></img>
+										<p>Member vote</p>
+										<p>Legislators vote</p>
+										<p>Vote statistics – total votes, total constitutes vote, support %</p>
+										<p>Legislative vote sway – how far representative voting has an effect</p>
+									</td>
+								</tr>
+								
+							</table></td>
+					</tr>
+				</table>
+				<div class="footer" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; width: 100%; clear: both; color: #999; margin: 0; padding: 20px;">
+					<table width="100%" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;"><tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;"><td class="aligncenter content-block" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 12px; vertical-align: top; color: #999; text-align: center; margin: 0; padding: 0 0 20px;" align="center" valign="top"><p style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 12px; color: #999; text-decoration: underline; margin: 0;">it is a great privilege and our civic duty to create a citizen-fueled democracy. With service to our unity and to our nation we will prosper.</p> <a href="https://www.fax2dc.com/donate">donate</a></td>
+						</tr></table></div></div>
+		</td>
+		<td style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0;" valign="top"></td>
+	</tr></table></body>
+</html>
